[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab~=3.1",
]
build-backend = "hatchling.build"

[project]
name = "jupyros"
description = "A JupyterLab extension."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ipywidgets>=7.7.2",
    "bqplot",
    "numpy",
    "rospkg",
    "ipycanvas"
]
authors = [
    { name = "Wolf Vollprecht", email = "w.vollprecht@gmail.com" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab3",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
version = "0.6.1"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/robostack/jupyter-ros"

[tool.hatch.build]
artifacts = [
    "jupyros/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyros/labextension/static" = "share/jupyter/labextensions/jupyter-ros/static"
"install.json" = "share/jupyter/labextensions/jupyter-ros/install.json"
"jupyros/labextension/package.json" = "share/jupyter/labextensions/jupyter-ros/package.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyros/labextension/static/style.js",
    "jupyros/labextension/package.json",
]
skip-if-exists = [
    "jupyros/labextension/static/style.js",
    "jupyros/labextension/index.js",
    "jupyros/nbextension/extension.js"
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "jupyros/labextension"
source_dir = "lib"
build_cmd = "build"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml" },
    { src = "jupyros/_version.py" },
    { src = "package.json" },
]

[tool.tbump.version]
current = "0.6.1"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[license]
file = "LICENSE"
