[bdist_wheel]
universal=1

[metadata]
name = jupyros
version = attr: jupyros.__version__
description = ROS 3D Jupyter widgets
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = ipython, jupyter, widgets
license = BSD 3-Clause License
classifiers =
    Framework :: IPython
    Programming Language :: Python :: 3